# intent-inference

./: .gitignore  .python-version  LICENSE  README.md  bootstrap-dev-env.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  tests.yml
intent_inference/: __init__.py  intent.py
intent_inference/algorithms/: DBScanCluster.py  IsolationForestOutlier.py  Skyline.py
intent_inference/compute/: kmeans_cluster.py
intent_inference/inference/: intent.py
src/intent_inference/: __init__.py  api.py  inference.py  prediction.py
src/intent_inference/algorithms/: DBScanOutlier.py  KMeansCluster.py  LinearRegression.py  PolynomialRegression.py
src/intent_inference/compute/: dbscan.py  isolationforest_outlier.py  kmeans_cluster.py  range.py
src/intent_inference/inference/: inference.py  intent.py  prediction.py
src/intent_inference/inference/algorithms/: DBScanCluster.py  DBScanOutlier.py  IsolationForestOutlier.py  KMeansCluster.py  LinearRegression.py  PolynomialRegression.py  Range.py  Skyline.py
src/intent_inference/tests/: test_intent.py
src/intent_inference/utils/: __init__.py
