[tool.poetry]
name = "intent-inference"
version = "0.1.9"
description = "Predicts selection intent"
authors = ["Jake Wagoner, Kiran Gadhave"]
readme = "README.md"
packages = [{include = "intent_inference", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
paretoset = "^1.2.3"
vega-datasets = "^0.9.0"

[tool.poetry.dev-dependencies]
tox = "^4.5.2"
pytest = "^7.3.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"