[tool.poetry]
name = "intent-inference"
version = "0.3.1"
description = "Predicts selection intent"
authors = ["Jake Wagoner, Kiran Gadhave"]
readme = "README.md"
packages = [{include = "intent_inference", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
pandas = "^1.0.0"
paretoset = "^1.2.3"
vega-datasets = "^0.9.0"

[tool.poetry.dev-dependencies]
tox = "^4.5.2"
pytest = "^7.3.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"
black = "^23.7.0"

[tool.poetry.group.dev.dependencies]
pytest-testmon = "^2.0.12"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
